<resources>
    <string name="app_name">RentX</string>

    <!-- Login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="button_log_in">Log In</string>
    <string name="register_message">Don\'t have an account?</string>
    <string name="welcome_message">Welcome to Item Rental</string>

    <!-- Logout -->
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Register -->
    <string name="create_account_message">Create an account:</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="button_register">Register</string>
    <string name="button_cancel">Cancel</string>
    <string name="register_successful">Register successful! Now you can login.</string>
    <string name="not_valid_email">Not a valid email address!</string>

    <!-- Empty Layout -->
    <string name="error_retry">Retry</string>
    <string name="no_results">No results</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty!</string>

    <!-- Rentable Item List -->
    <string name="category_separation">%s » %s</string>

    <!-- Add Rentable Item -->
    <string name="title">Title</string>
    <string name="category">Category : </string>
    <string name="usage_type">Usage Type</string>
    <string name="description">Item Description</string>
    <string name="price">Price</string>
    <string name="rental_period">Rental period</string>
    <string name="start_date">Rental Start Date</string>
    <string name="end_date">Rental End Date</string>
    <string name="add">Add</string>
    <string name="choose_image_source">Choose an image source</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_or_take_photo">You have to choose or take a photo!</string>
    <string name="incorrect_start_date">Start date cannot be before current date or after end date!</string>
    <string name="incorrect_end_date">End date cannot be before current date or before start date!</string>

    <!-- Details -->
    <string name="button_rent">Rent</string>
    <string name="button_see_reviews">See reviews</string>
    <string name="other_items_message">Other items from this user:</string>
    <string name="price_lei">%d Lei</string>
    <string name="no_other_items">This user has no other items available for rent</string>
    <string name="choose_rent_period">Choose a rental period that does not contain unavailable dates</string>
    <string name="incorrect_range">Incorrect date range</string>
    <string name="no_range_selected">No range selected</string>
    <string name="item_rented_sucessfully">Item rented successfully</string>
    <string name="item_rented_failed">Failed renting item</string>

    <!-- Add Review -->
    <string name="add_review">Add your review</string>
    <string name="no_reviews">This item has no reviews yet</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
</resources>
