<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="40dp"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/dialogImageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/choose_image_source"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dialogCameraImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toStartOf="@id/dialogGalleryImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogImageTitle"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/dialogGalleryImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialogCameraImage"
        app:layout_constraintTop_toBottomOf="@id/dialogImageTitle"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toEndOf="@id/dialogCameraImage"
        app:layout_constraintStart_toStartOf="@id/dialogCameraImage"
        app:layout_constraintTop_toBottomOf="@id/dialogCameraImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="@id/dialogGalleryImage"
        app:layout_constraintStart_toStartOf="@id/dialogGalleryImage"
        app:layout_constraintTop_toBottomOf="@id/dialogGalleryImage" />
</androidx.constraintlayout.widget.ConstraintLayout>