<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/addAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/addToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentInsetStart="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/addBackButton"
                    android:layout_width="?android:attr/actionBarSize"
                    android:layout_height="0dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_arrow_back"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_logo_foreground"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addAppBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addTitleInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addTitleEditText"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="textCapSentences"
                    android:maxLength="20"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/addCategoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/category"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/addCategorySpinner"
                app:layout_constraintStart_toStartOf="@id/addTitleInput"
                app:layout_constraintTop_toTopOf="@id/addCategorySpinner" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/addCategorySpinner"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="@id/addTitleInput"
                app:layout_constraintStart_toEndOf="@id/addCategoryText"
                app:layout_constraintTop_toBottomOf="@id/addTitleInput" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addDescriptionInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addCategorySpinner">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addDescriptionEditText"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="200"
                    android:maxLines="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addPriceInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addDescriptionInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addPriceEditText"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/addRentalPeriodText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="5dp"
                android:text="@string/rental_period"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/addPriceInput"
                app:layout_constraintStart_toStartOf="@id/addPriceInput"
                app:layout_constraintTop_toBottomOf="@id/addPriceInput"
                tools:ignore="RtlSymmetry" />

            <com.savvi.rangedatepicker.CalendarPickerView
                android:id="@+id/addCalendarPickerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:nestedScrollingEnabled="true"
                app:layout_constraintEnd_toEndOf="@id/addRentalPeriodText"
                app:layout_constraintStart_toStartOf="@id/addRentalPeriodText"
                app:layout_constraintTop_toBottomOf="@id/addRentalPeriodText" />

            <ImageView
                android:id="@+id/addImage"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_choose_image"
                app:layout_constraintEnd_toEndOf="@id/addCalendarPickerView"
                app:layout_constraintStart_toStartOf="@id/addCalendarPickerView"
                app:layout_constraintTop_toBottomOf="@id/addCalendarPickerView"
                tools:ignore="ContentDescription" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/addPriceInput"
                app:layout_constraintStart_toStartOf="@id/addPriceInput"
                app:layout_constraintTop_toBottomOf="@id/addImage"
                app:layout_constraintVertical_bias="0.0" />

            <proiectcolectiv.g934.itemrental.utils.EmptyLayout
                android:id="@+id/addEmptyLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/addAddButton"
                app:layout_constraintEnd_toEndOf="@id/addAddButton"
                app:layout_constraintStart_toStartOf="@id/addAddButton"
                app:layout_constraintTop_toTopOf="@id/addAddButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>